Hide horizontal overflow to prevent BG cut off

--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 * {
     margin: 0px;
+    padding: 0px;
+    border: 0px;
 }
 
 body {
@@ -9,10 +11,30 @@ body {
     justify-content: flex-start;
 }
 
+/* Multiple selectors */
+
+.hero,
+.games-section,
+.inspirational-quote {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.header,
+.hero,
+.games-section,
+.inspirational-quote {
+    overflow: hidden;
+    padding-left: 200px;
+    padding-right: 200px;
+}
+
 /* Header */
 
 .header {
-    padding: 10px 200px;
+    padding-top: 10px;
+    padding-bottom: 10px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -39,12 +61,9 @@ body {
 
 .hero {
     background-color: #201b2b;
-    padding: 140px 200px;
-    display: flex;
-    flex-direction: column;
+    padding-top: 140px;
+    padding-bottom: 140px;
     gap: 16px;
-    align-items: center;
-
 }
 
 .hero-main-text {
@@ -64,10 +83,8 @@ body {
 /* Games section */
 
 .games-section {
-    padding: 60px 200px 140px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    padding-top: 60px;
+    padding-bottom: 140px;
     gap: 60px;
 }
 
@@ -109,13 +126,12 @@ body {
 /* Inspirational quote */
 
 .inspirational-quote {
-    background-color: #d4bdff;
+    background-color: #ddcbff;
     color: #201b2b;
-    display: flex;
-    flex-direction: column;
-    padding: 140px 200px;
+    padding-top: 140px;
+    padding-bottom: 140px;
     gap: 12px;
-    margin: auto;
+    justify-content: center;
 }
 
 .quote-text {
@@ -131,7 +147,6 @@ body {
     font-size: 18px;
     flex-shrink: 0;
 }
-
 
 /* General */
 
